FPS fix, final version

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -66,7 +66,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Wobble EXPORTS/10-4 6:10 WIN/W O B B L E.exe"
+export_path="../Wobble EXPORTS/WIN FPS FIX/W O B B L E.exe"
 script_export_mode=1
 script_encryption_key=""
 
